Fix gallery images visibility

--- a/honda-prost/css/galeria.css
+++ b/honda-prost/css/galeria.css
@@ -109,15 +109,16 @@ nav {
 .gallery-wrapper {
   z-index: 2;
   overflow: auto;
-  padding: 0.75em;
+  padding: 1em;
   background-color: rgba(255, 255, 255, 0.1);
   border-left: 1px solid rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(20px);
+  max-height: 100%;
 }
 
 .gallery {
   width: 100px;
-  height: 300vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   gap: 0.75em;
@@ -125,15 +126,19 @@ nav {
 
 .item {
   position: relative;
-  flex: 1;
+  width: 100px;
+  height: 120px;
   background-color: #aeaeae;
   overflow: hidden;
+  cursor: pointer;
+  border-radius: 4px;
 }
 
 .item img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  display: block;
 }
 
 .item::after {
